<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">NR Clicker</string>
    <string name="title_section1">Corp</string>
    <string name="title_section2">Runner</string>
    <string name="stats_greeting">Stats coming in a future update!</string>
    <string name="action_settings">Settings...</string>
    <string name="action_newgame">New game</string>
    <string name="placeholder_LNP_label">Clicker\nlabel_much_wow</string>
    <string name="placeholder_LNP_log">...</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="rotation_enabled">Rotation</string>
    <string name="rotation_enabled_desc">Rotate when switching player</string>
    <string name="app_preferences">Preferences</string>
    <string name="app_behaviours">Behaviours</string>
    <string name="screen_sleep_disabled_desc">If you need to save power, untick this.</string>
    <string name="screen_sleep_disabled">Disable screen sleep</string>
    <string name="auto_switch_player_enabled">Automatic player switching</string>
    <string name="action_statistics">Statistics</string>
    <string name="title_activity_statistics">Statistics</string>
    <string name="action_clear">Clear</string>
    <string name="auto_switch_player_desc">After 2 seconds, the app will switch to the next player if not aborted.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="abort">Abort</string>
    <string name="action_endgame">End and save</string>

</resources>
