<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_newgame"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_newgame" />
    <item
        android:id="@+id/action_endgame"
        android:orderInCategory="120"
        android:showAsAction="never"
        android:title="@string/action_endgame" />
    <item
        android:id="@+id/action_statistics"
        android:orderInCategory="150"
        android:showAsAction="never"
        android:title="@string/action_statistics" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="200"
        android:showAsAction="never"
        android:title="@string/action_settings" />
</menu>
